Contact section added to html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             Designer</h2>
             </section>
             </div>
-            <!-- HOME -->
+        <!-- HOME -->
         <div class="section section-home">
             <div class="portrait"><img src="" alt="a portrait picture of my face"></div>
             <div class="button-container">
@@ -28,9 +28,9 @@
             </div>
             <p>I’m a multidisciplinary digital designer focused in making <span class="bold">simple, clear</span> and <span class="bold">useful</span> websites that’ll work for you.
             Currently based in Valencia, but willing to work anywhere or remote. :^)
-            I enjoy photography, listening to music, playing videogames, reading and, obviously, cats! Also, I’m skilled as an illustrator & graphic designer.</p>
+            I enjoy photography, listening to music, playing videogames, reading and, obviously, I love cats! Also, I’m skilled as an illustrator & graphic designer.</p>
         </div>
-      <!-- ABOUT ME -->
+        <!-- ABOUT ME -->
         <div class="section section-about bg--color-darkgray"><section class="aboutMe-p-section">
         <section class="education-section">
          <details>
@@ -61,7 +61,31 @@
         </section>
       </section></div>
       <!-- CONTACT FORM -->
-        <div class="section section-contact">aqui contacto</div>
-      </div>
+        <div class="section section-contact">
+          <form>
+            <label for="name">Name</label>   
+            <input name="name" type="text" class="contact-form" placeholder="How should I call you" />
+
+            <label for="email">Email</label>   
+            <input name="email" type="text" class="contact-form" placeholder="So I can contact you" />
+
+            <label for="text">Message</label> 
+            <textarea name="text" class="contact-form" placeholder="Do you need help with a project? Ask for a budget? Maybe more information about me or my work?
+            Tell me how can I help!"></textarea>
+
+            <input type="submit" value="SEND"/>
+          </form>
+          <div class="section-findme">
+            <p class="links-p">You can also find me on:</p>
+            <a href="https://github.com/mrlrcn">
+              <img border="0" alt="Github" src="logo_w3s.gif" width="100" height="100">
+            <a href="https://www.linkedin.com/in/maralarcon/">
+              <img border="0" alt="Linkedin" src="logo_w3s.gif" width="100" height="100">
+              <!--hazte Behance!! cambiar codepen x behance-->
+            <a href="https://codepen.io/mrlrcn">
+              <img border="0" alt="Codepen" src="logo_w3s.gif" width="100" height="100"> <!--Hace falta width/height?¿?¿ creo q no)-->
+          </div>
+        </div>
+    </div>
 </body>
 </html>
