--- a/index.html
+++ b/index.html
@@ -27,15 +27,22 @@
       </div>
 
         <!-- HEADER -->
-        <header class="header center-content">
+        <header class="header">
+          <p>Hi, I'm</p>
           <h1>Mar Alarcón</h1>
           <h2>UX/UI, Graphic & Web Designer</h2>
+          <div class="arrow-container">
+            <img class="arrow-txt" src="imgs/scrolltext-img.svg" alt="spinning text that says scroll down">
+            <img class="arrow-img" src="imgs/arrow-img.svg" alt="black arrow pointing down">
+          </div>
         </header>
 
-        <!-- HOME -->
-        <div class="home-section center-content">
-            <div class="portrait"><img src="" alt="a portrait picture of my face"></div>
-            <div class="button-container">
+        <!-- HOME (ABOUT ME) cambiar nombres!!!-->
+        <div class="aboutMe-section center-content">
+            <div class="portrait-container">
+              <img class="portrait" src="imgs/face-img.svg" alt="a portrait picture of my face">
+            </div>
+              <div class="button-container">
                 <button class="btn primary-btn">ABOUT ME</button>
                 <button class="btn secondary-btn">CONTACT ME</button>
             </div>
@@ -44,9 +51,9 @@
             I enjoy photography, listening to music, playing videogames, reading and, obviously, I love cats! Also, I’m skilled as an illustrator & graphic designer.</p>
         </div>
 
-        <!-- ABOUT ME -->
-        <div class="aboutMe-section center-content">
-        <section class="aboutMe-p-section">
+        <!-- ABOUT ME (SKILLS) -->
+        <div class="skills-section center-content">
+        <section class="skills-p-section">
           <section class="education-section">
           <details>
             <summary class="section-title">EDUCATION</summary>
