added rrss icons

--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
 
     <div class="if">
       <!-- TOPBAR -->
-      <div class="topbar">
-        <div>=D</div>
-      <div class="navbar" id="js-showHide">
-        <nav>
-          <a href="">ABOUT</a>
-          ·
-          <a href="">SKILLS</a>
-          ·
-          <a href="">CONTACT</a>
-        </nav>
-      </div>
-      <button onclick="toggle()">toggle</button>
-    </div>
+        <div class="topbar">  
+          <div>=D</div>
+        <div class="navbar" id="js-showHide">
+          <nav>
+            <a href="">ABOUT</a>
+            ·
+            <a href="">SKILLS</a>
+            ·
+            <a href="">CONTACT</a>
+          </nav>
+        </div>
+        <button onclick="toggle()">toggle</button>
+        </div>
 
         <!-- HEADER -->
         <header class="header">
@@ -104,14 +104,15 @@
 
           <div class="findMe-section center-content">
             <p class="links-p">You can also find me on:</p>
-            <a href="https://github.com/mrlrcn">
-              <img border="0" alt="Github" src="logo_w3s.gif" width="100" height="100">
-            <a href="https://www.linkedin.com/in/maralarcon/">
-              <img border="0" alt="Linkedin" src="logo_w3s.gif" width="100" height="100">
-              <!--hazte Behance!! cambiar codepen x behance-->
-            <a href="https://codepen.io/mrlrcn">
-              <img border="0" alt="Codepen" src="logo_w3s.gif" width="100" height="100"> <!--Hace falta width/height?¿?¿ creo q no)-->
-          </div>
+            <div class="rrss-icons">
+              <a href="https://github.com/mrlrcn" target="_blank">
+                <img border="0" alt="Github" src="imgs/logo-github.svg" width="40" height="40">
+              <a href="https://www.linkedin.com/in/maralarcon/" target="_blank">
+                <img border="0" alt="Linkedin" src="imgs/logo-linkedin.svg" width="40" height="40">
+                <!--hazte Behance!! cambiar codepen x behance-->
+              <a href="https://codepen.io/mrlrcn" target="_blank">
+                <img border="0" alt="Codepen" src="imgs/logo-codepen.svg" width="40" height="40"> <!--Hace falta width/height?¿?¿ creo q no)-->
+              </div>
         </div>
     </div>
   <!--Link to JS File-->
