added fonts em, centered anim, margin body

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="if">
       <!-- TOPBAR -->
         <div class="topbar">  
-          <div>=D</div>
+          <div> <img src="imgs/face-img.svg" alt="a smiley face" width="40" height="100%"> </div>
         <div class="navbar" id="js-showHide">
           <nav>
             <a href="">ABOUT</a>
@@ -25,7 +25,7 @@
             <a href="">CONTACT</a>
           </nav>
         </div>
-        <button onclick="toggle()">toggle</button>
+        <button class="btn-menu" onclick="toggle()"></button>
         </div>
 
         <!-- HEADER -->
@@ -42,13 +42,13 @@
         <!-- ABOUT ME-->
         <div class="aboutMe-section center-content">
             <div class="portrait-container">
-              <img class="portrait" src="imgs/face-img.svg" alt="a portrait picture of my face">
+              <img class="portrait" src="imgs/portrait.jpeg" alt="a portrait picture of my face">
             </div>
               <div class="button-container">
                 <button class="btn">ABOUT ME</button>
                 <button class="btn btn--secondary">CONTACT ME</button>
             </div>
-            <p>I’m a multidisciplinary digital designer focused in making <span class="bold">simple, clear</span> and <span class="bold">useful</span> websites that’ll work for you.
+            <p>I’m a multidisciplinary digital designer focused in making <b>simple, clear</b> and <b>useful</b> websites that’ll work for you.
             Currently based in Valencia, but willing to work anywhere or remote. :^)
             I enjoy photography, listening to music, playing videogames, reading and, obviously, I love cats! Also, I’m skilled as an illustrator & graphic designer.</p>
         </div>
@@ -87,7 +87,8 @@
     </div>
     
       <!-- CONTACT FORM -->
-        <div class="contact-section">
+        <div class="contact-section center-content">
+          <p class="bigTitle"> Let's Talk!</p>
           <!-- INPUTS -->
           <form>
             <label for="name">Name</label>   
@@ -106,16 +107,16 @@
             <p class="links-p">You can also find me on:</p>
             <div class="rrss-icons">
               <a href="https://github.com/mrlrcn" target="_blank">
-                <img border="0" alt="Github" src="imgs/logo-github.svg" width="40" height="40">
+                <img border="0" alt="Github" src="imgs/logo-github.svg" width="25" height="25">
               <a href="https://www.linkedin.com/in/maralarcon/" target="_blank">
-                <img border="0" alt="Linkedin" src="imgs/logo-linkedin.svg" width="40" height="40">
+                <img border="0" alt="Linkedin" src="imgs/logo-linkedin.svg" width="25" height="25">
                 <!--hazte Behance!! cambiar codepen x behance-->
               <a href="https://codepen.io/mrlrcn" target="_blank">
-                <img border="0" alt="Codepen" src="imgs/logo-codepen.svg" width="40" height="40"> <!--Hace falta width/height?¿?¿ creo q no)-->
+                <img border="0" alt="Codepen" src="imgs/logo-codepen.svg" width="25" height="25">
               </div>
         </div>
     </div>
   <!--Link to JS File-->
-  <script src="scripts.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
