--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
           <div> <img src="imgs/face-img.svg" alt="a smiley face" width="40" height="100%"> </div>
         <div class="navbar" id="js-showHide">
           <nav>
-            <a href="">ABOUT</a>
+            <a class="navtext" href="#aboutme">ABOUT</a>
             ·
-            <a href="">SKILLS</a>
+            <a class="navtext" href="#skills">SKILLS</a>
             ·
-            <a href="">CONTACT</a>
+            <a class="navtext" href="#contact">CONTACT</a>
           </nav>
         </div>
         <button class="btn-menu" onclick="toggle()"></button>
@@ -40,7 +40,7 @@
         </header>
 
         <!-- ABOUT ME-->
-        <div class="aboutMe-section center-content">
+        <div id="aboutme" class="aboutMe-section center-content">
             <div class="portrait-container">
               <img class="portrait" src="imgs/portrait.jpeg" alt="a portrait picture of my face">
             </div>
@@ -54,7 +54,7 @@
         </div>
 
         <!-- SKILLS -->
-        <div class="skills-section center-content">
+        <div id="skills" class="skills-section center-content">
         <section class="skills-p-section">
           <section class="education-section">
           <details>
@@ -87,7 +87,7 @@
     </div>
     
       <!-- CONTACT FORM -->
-        <div class="contact-section center-content">
+        <div id="contact" class="contact-section center-content">
           <p class="bigTitle"> Let's Talk!</p>
           <!-- INPUTS -->
           <form>
