changed js file scripts for index

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <!-- TOPBAR -->
         <div class="topbar">  
           <div> <img src="imgs/face-img.svg" alt="a smiley face" width="40" height="100%"> </div>
-        <div class="navbar" id="js-showHide">
+        <div class="navbar menuToggle" id="js-showHide">
           <nav>
             <a class="navtext" href="#aboutme">ABOUT</a>
             ·
@@ -25,7 +25,7 @@
             <a class="navtext" href="#contact">CONTACT</a>
           </nav>
         </div>
-        <button class="btn-menu" onclick="toggle()"></button>
+        <button class="btn-menu"></button>
         </div>
 
         <!-- HEADER -->
