--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,400;0,700;1,400&family=Rubik:ital,wght@0,400;0,800;1,800&display=swap" rel="stylesheet">
+    
+      <!--Link to JS File-->
+  <script src="index.js"></script>
+
     <title>About Me: Mar</title>
 </head>
 
@@ -14,9 +18,11 @@
 
     <div class="if">
       <!-- TOPBAR -->
-        <div class="topbar">  
+        <div class="topbar"> 
+          <!--CARITA FELIZ-->
           <div> <img src="imgs/face-img.svg" alt="a smiley face" width="40" height="100%"> </div>
-        <div class="navbar menuToggle" id="js-showHide">
+          <!--ENLACES-->
+          <div class="navbar" id="js-showHide">
           <nav>
             <a class="navtext" href="#aboutme">ABOUT</a>
             ·
@@ -25,7 +31,8 @@
             <a class="navtext" href="#contact">CONTACT</a>
           </nav>
         </div>
-        <button class="btn-menu"></button>
+        <!--BOTON-->
+        <div class="btn-menu"></div>
         </div>
 
         <!-- HEADER -->
@@ -55,6 +62,7 @@
 
         <!-- SKILLS -->
         <div id="skills" class="skills-section center-content">
+          <p class="bigTitle">About me</p>
         <section class="skills-p-section">
           <section class="education-section">
           <details>
@@ -116,7 +124,5 @@
               </div>
         </div>
     </div>
-  <!--Link to JS File-->
-  <script src="index.js"></script>
 </body>
 </html>
