fixed mobile first design

--- a/index.html
+++ b/index.html
@@ -17,29 +17,12 @@
 <body>
 
     <div class="if">
-      <!-- TOPBAR -->
-        <div class="topbar"> 
-          <!--CARITA FELIZ-->
-          <div> <img src="imgs/face-img.svg" alt="a smiley face" width="40" height="100%"> </div>
-          <!--ENLACES-->
-          <div class="navbar" id="js-showHide">
-          <nav>
-            <a class="navtext" href="#aboutme">ABOUT</a>
-            ·
-            <a class="navtext" href="#skills">SKILLS</a>
-            ·
-            <a class="navtext" href="#contact">CONTACT</a>
-          </nav>
-        </div>
-        <!--BOTON-->
-        <div class="btn-menu"></div>
-        </div>
-
         <!-- HEADER -->
         <header class="header">
-          <p>Hi, I'm</p>
-          <h1>Mar Alarcón</h1>
-          <h2>UX/UI, Graphic & Web Designer</h2>
+          <span>Hi, I'm:</span>
+          <h1>Mar</h1>
+          <h2>Alarcón</h2>
+          <h3>UX/UI, Graphic & Web Designer</h3>
           <div class="arrow-container">
             <img class="arrow-txt" src="imgs/scrolltext-img.svg" alt="spinning text that says scroll down">
             <img class="arrow-img" src="imgs/arrow-img.svg" alt="black arrow pointing down">
@@ -55,14 +38,14 @@
                 <button class="btn">ABOUT ME</button>
                 <button class="btn btn--secondary">CONTACT ME</button>
             </div>
-            <p>I’m a multidisciplinary digital designer focused in making <b>simple, clear</b> and <b>useful</b> websites that’ll work for you.
-            Currently based in Valencia, but willing to work anywhere or remote. :^)
-            I enjoy photography, listening to music, playing videogames, reading and, obviously, I love cats! Also, I’m skilled as an illustrator & graphic designer.</p>
+            <p>I’m a multidisciplinary digital designer focused in making <b>simple, clear</b> and <b>useful</b> websites that’ll work for you.</p>
+            <p>Currently based in Valencia, but willing to work anywhere or remote. :^)</p>
+            <p>I enjoy photography, listening to music, playing videogames, reading and, obviously, I love cats! Also, I’m skilled as an illustrator & graphic designer.</p>
         </div>
 
         <!-- SKILLS -->
         <div id="skills" class="skills-section center-content">
-          <p class="bigTitle">About me</p>
+          <p class="bigTitle moreStuff">More Stuff</p>
         <section class="skills-p-section">
           <section class="education-section">
           <details>
